projeto JS || HTML

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Matheus S. Antonio</title>
     <script defer src="script.js"></script>
 </head>
 <body>
-    <h1>cvcvvc</h1>
+    <h1>matheus que chego primeiro</h1>
+    <h2>da like compartilha com as empresas</h2>
+    <h3>até um outro codigo</h3>
 </body>
 </html>
